# Mole_in_the_Hole

./: ACKNOWLEDGEMENTS.MD  README.md  Technical_Documentation.md  main.py  pyproject.toml
algo/: ai.py  board.py  cheat.py  game.py  pawn.py  player.py
assets/lang/: de.json  en.json  es.json  fr.json  it.json
assets/themes/: themes.json
audio/: audioManager.py  loopingStream.py
gui/: GUICore.py
gui/board_views/: baseBoard.py  viewMatch.py  viewPlace.py  viewRotate.py
gui/core/: Navigator.py  NetworkController.py  ResourceManager.py  StateManager.py  UIFactory.py
gui/launcher_pages/: pageCredits.py  pageEnd.py  pageLocal.py  pageMain.py  pageOnline.py  pageOptions.py  pagePlay.py  pageProfile.py
network/: LANDiscovery.py  client.py  firewall.py  getIps.py  netUtils.py  server.py
